src/test/resources/amyc/typer/failing/OperatorError3.grading.amy
object OperatorError
    val str: String = !true;
    str
end OperatorError
